--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+    <link href="./output.css" rel="stylesheet">
   </head>
   <body>
     <noscript>
